k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minibank
  labels:
    name: minibank
    environment: production
