k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minibank-ingress
  namespace: minibank
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: minibank.tekbridge.co.za
    http:
      paths:
      - backend:
          service:
            name: minibank-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minibank.tekbridge.co.za
    secretName: minibank-tls
